2009-07-11  Sascha Hlusiak  <mail@saschahlusiak.de>

        * isatapd-0.9.5 released

        * configure.in, src/tunnel.c: check for ip_tunnel_prl.rs_delay and pass to kernel

	* src/isatapd.c: detect running kernel to set send_rs
			 new option --user-rs, rename --no-rs to --no-user-rs

	* README: filled

	* man/isatapd.man: reflect changes, minor fixes

2009-06-07  Sascha Hlusiak  <mail@saschahlusiak.de>

        * initial releases 0.9.0 to 0.9.4
